# serializer version: 1
# name: test_get_schedule
  dict({
    'climate.zona_001': dict({
      'controller_time': '2026-09-25T12:22:06.806000',
      'season': 'summer',
      'summer': dict({
        'crono': list([
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
        ]),
        'days': list([
          dict({
            'day': 'sunday',
            'levels': list([
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'economy',
              'economy',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'off',
              'off',
              'economy',
              'economy',
            ]),
            'preset': '1',
            'weekday': 0,
          }),
          dict({
            'day': 'monday',
            'levels': list([
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'economy',
              'economy',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'off',
              'off',
              'economy',
              'economy',
            ]),
            'preset': '1',
            'weekday': 1,
          }),
          dict({
            'day': 'tuesday',
            'levels': list([
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'economy',
              'economy',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'off',
              'off',
              'economy',
              'economy',
            ]),
            'preset': '1',
            'weekday': 2,
          }),
          dict({
            'day': 'wednesday',
            'levels': list([
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'economy',
              'economy',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'off',
              'off',
              'economy',
              'economy',
            ]),
            'preset': '1',
            'weekday': 3,
          }),
          dict({
            'day': 'thursday',
            'levels': list([
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'economy',
              'economy',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'off',
              'off',
              'economy',
              'economy',
            ]),
            'preset': '1',
            'weekday': 4,
          }),
          dict({
            'day': 'friday',
            'levels': list([
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'economy',
              'economy',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'off',
              'off',
              'economy',
              'economy',
            ]),
            'preset': '1',
            'weekday': 5,
          }),
          dict({
            'day': 'saturday',
            'levels': list([
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'off',
              'economy',
              'economy',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'off',
              'off',
              'economy',
              'economy',
            ]),
            'preset': '1',
            'weekday': 6,
          }),
        ]),
        'source': 'prog',
      }),
      'timezone': 'Europe/Rome',
      'winter': dict({
        'crono': list([
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
          'pre_comfort',
        ]),
        'days': list([
          dict({
            'day': 'sunday',
            'levels': list([
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'economy',
              'economy',
              'economy',
              'economy',
            ]),
            'preset': '1',
            'weekday': 0,
          }),
          dict({
            'day': 'monday',
            'levels': list([
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'economy',
              'economy',
              'economy',
              'economy',
            ]),
            'preset': '1',
            'weekday': 1,
          }),
          dict({
            'day': 'tuesday',
            'levels': list([
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'economy',
              'economy',
              'economy',
              'economy',
            ]),
            'preset': '1',
            'weekday': 2,
          }),
          dict({
            'day': 'wednesday',
            'levels': list([
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'economy',
              'economy',
              'economy',
              'economy',
            ]),
            'preset': '1',
            'weekday': 3,
          }),
          dict({
            'day': 'thursday',
            'levels': list([
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'economy',
              'economy',
              'economy',
              'economy',
            ]),
            'preset': '1',
            'weekday': 4,
          }),
          dict({
            'day': 'friday',
            'levels': list([
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'economy',
              'economy',
              'economy',
              'economy',
            ]),
            'preset': '1',
            'weekday': 5,
          }),
          dict({
            'day': 'saturday',
            'levels': list([
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'economy',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'comfort',
              'economy',
              'economy',
              'economy',
              'economy',
            ]),
            'preset': '1',
            'weekday': 6,
          }),
        ]),
        'source': 'prog',
      }),
      'zone': '001',
    }),
  })
# ---
# name: test_snapshot[climate.rehom_plant-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.5,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 18.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'pre_comfort',
        'comfort',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.rehom_plant',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'rehom',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'house',
    'unique_id': '02:00:00:31:7a:5a_plant_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshot[climate.rehom_plant-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'controller_setpoint': 26.0,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 24.2,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Rehom plant',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.5,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 18.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'comfort',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'pre_comfort',
        'comfort',
      ]),
      'setpoint_mismatch': True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 24.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.rehom_plant',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_snapshot[climate.zona_001-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 27.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 21.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'pre_comfort',
        'comfort',
        'temporary_comfort',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.zona_001',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'rehom',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'zone',
    'unique_id': '02:00:00:31:7a:5a_zone_001_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshot[climate.zona_001-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'controller_setpoint': 26.0,
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 53.0,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 24.2,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zona 001',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 27.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 21.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'comfort',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'pre_comfort',
        'comfort',
        'temporary_comfort',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 24.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.zona_001',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_snapshot[climate.zona_002-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 27.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 21.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'pre_comfort',
        'comfort',
        'temporary_comfort',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.zona_002',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'rehom',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'zone',
    'unique_id': '02:00:00:31:7a:5a_zone_002_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshot[climate.zona_002-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'controller_setpoint': 26.0,
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 51.0,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 24.7,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zona 002',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 27.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 21.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'comfort',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'pre_comfort',
        'comfort',
        'temporary_comfort',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 23.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.zona_002',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_snapshot[climate.zona_003-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 27.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 21.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'pre_comfort',
        'comfort',
        'temporary_comfort',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.zona_003',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'rehom',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'zone',
    'unique_id': '02:00:00:31:7a:5a_zone_003_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshot[climate.zona_003-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'controller_setpoint': 26.0,
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 50.0,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 25.1,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zona 003',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 27.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 21.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'comfort',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'pre_comfort',
        'comfort',
        'temporary_comfort',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 24.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.zona_003',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_snapshot[climate.zona_009-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 27.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 21.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'pre_comfort',
        'comfort',
        'temporary_comfort',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.zona_009',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'rehom',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'zone',
    'unique_id': '02:00:00:31:7a:5a_zone_009_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshot[climate.zona_009-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'controller_setpoint': 26.0,
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 50.0,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 25.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zona 009',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 27.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 21.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'comfort',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'pre_comfort',
        'comfort',
        'temporary_comfort',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 24.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.zona_009',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_snapshot[climate.zona_010-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 27.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 21.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'pre_comfort',
        'comfort',
        'temporary_comfort',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.zona_010',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'rehom',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'zone',
    'unique_id': '02:00:00:31:7a:5a_zone_010_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshot[climate.zona_010-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'controller_setpoint': 26.0,
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 49.0,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 25.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zona 010',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 27.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 21.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'comfort',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'pre_comfort',
        'comfort',
        'temporary_comfort',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 24.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.zona_010',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_snapshot[climate.zona_011-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 27.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 21.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'pre_comfort',
        'comfort',
        'temporary_comfort',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.zona_011',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'rehom',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'zone',
    'unique_id': '02:00:00:31:7a:5a_zone_011_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshot[climate.zona_011-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'controller_setpoint': 26.0,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 25.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zona 011',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 27.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 21.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'comfort',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'eco',
        'pre_comfort',
        'comfort',
        'temporary_comfort',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 24.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.zona_011',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
